# pet-actix-web

./: .env.example  Cargo.toml  Readme.md  thunder-collection-pet-actix-web-2-diesel.json
migrations/2023-06-22-165715_create_roles_table/: down.sql  up.sql
migrations/2023-06-30-161252_create_permissions_table/: down.sql  up.sql
src/: api_error.rs  main.rs  schema.rs
src/permission/: mod.rs  model.rs  routes.rs
src/role/: mod.rs  model.rs  routes.rs
src/test/: routes.rs
src/user/: mod.rs  model.rs  routes.rs
