[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-web = "4"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "4091.0.0"
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.2", features = ["mysql", "postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
r2d2 = "0.8.10"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
tokio = "1.28.2"
uuid = { version = "1.3.4", features = ["v4"] }
listenfd = "0.3"